# tortuga

./: .env  .gitignore  .gitmodules  BUILD  CMakeLists.txt  Cargo.toml  README.md  generate_workspace.bzl
google/: Cargo.toml
google/api/: http.grpc.pb.h  http.pb.h
google/firestore/v1beta1/: common.grpc.pb.h  common.pb.cc  common.pb.h  document.grpc.pb.h  document.pb.cc  document.pb.h  firestore.grpc.pb.h  firestore.pb.cc  firestore.pb.h  query.grpc.pb.h  query.pb.cc  query.pb.h  write.grpc.pb.h  write.pb.cc  write.pb.h
google/src/: lib.rs
google/src/api/: annotations.rs  http.rs  mod.rs
google/src/empty/: mod.rs
google/src/firestore/: common.rs  document.rs  firestore.rs  mod.rs  query.rs  write.rs
google/src/rpc/: status.rs
google/src/struct_pb/: mod.rs
google/src/type_/: latlng.rs
grpc/status/: status.grpc.pb.cc  status.grpc.pb.h  status.pb.cc  status.pb.h
scripts/: README.md  google_protoc.sh  googleapis_rust.sh  protoc.sh  protoc_rust.sh  tortuga_protoc.sh
src/: main.rs
src/googleapis/: annotations.rs  common.rs  document.rs  firestore.rs  firestore_grpc.rs  http.rs  latlng.rs  query.rs  status.rs  write.rs
src/main/java/com/google/rpc/: Status.java  StatusOrBuilder.java  StatusProto.java
src/main/java/io/tortuga/: Service.java  SimpleTask.java  TaskHandler.java  TaskHandlerRegistry.java  TaskResult.java  TaskSpec.java  TaskWatcher.java  Tortuga.java  TortugaConnection.java  TortugaContext.java  TortugaGrpc.java  TortugaHandlers.java  TortugaParamsProto.java  TortugaProto.java
src/test/java/io/tortuga/: TortugaIntegrationTest.java
tortuga/: Cargo.toml  baton_handler.cc  baton_handler.h  fields.cc  http.cc  http.h  http_client_main.cc  module.cc  module.h  progress_manager.cc  progress_manager.h  request_task_result.h  rpc_opts.cc  rpc_opts.h  sqlite_statement.cc  sqlite_statement.h  test.proto  time_logger.cc  time_logger.h  time_utils.cc  time_utils.h  tortuga.cc  tortuga.grpc.pb.cc  tortuga.grpc.pb.h  tortuga.h  tortuga.pb.cc  tortuga.pb.h  tortuga.proto  tortuga_main.cc  tortuga_params.grpc.pb.cc  tortuga_params.grpc.pb.h  tortuga_params.pb.cc  tortuga_params.pb.h  tortuga_params.proto  updated_task.h  workers_cache.cc  workers_cache.h  workers_manager.cc  workers_manager.h
tortuga/migrations/2018-12-29-142501_create_tasks/: up.sql
tortuga/migrations/2018-12-29-142504_create_workers/: up.sql
tortuga/modules/: firestore.cc  firestore.h
tortuga/plugin/: protoc_gen_tortuga.cc
tortuga/src/: lib.rs  models.rs  module.rs  schema.rs  tortuga_grpc_impl.rs
tortuga/src/proto/: mod.rs  tortuga.rs  tortuga_grpc.rs  tortuga_params.rs
tortuga/storage/: database_statement.cc  database_statement.h  fields.cc  fields.h  sqlite_statement.cc  sqlite_statement.h  statements_manager.cc  statements_manager.h  tortuga_storage.cc  tortuga_storage.h
